{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 106,
  "lineage": "98c37f9b-2f27-1417-5b28-78084206422d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:security-group/sg-08d1b7b30c0cc72ab",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d1b7b30c0cc72ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal TCP and UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "763429035406",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-817bsr-sg"
            },
            "tags_all": {
              "Name": "demo-817bsr-sg"
            },
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a9f1ca6b389db11b",
            "domain": "vpc",
            "id": "eipalloc-0822fc796c126b428",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-014ca1918e0615034",
            "private_dns": "ip-10-4-17-25.eu-west-1.compute.internal",
            "private_ip": "10.4.17.25",
            "public_dns": "ec2-108-128-167-90.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.167.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-817bsr-eu-west-1a"
            },
            "tags_all": {
              "Name": "demo-817bsr-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:internet-gateway/igw-0d0497320004a1b47",
            "id": "igw-0d0497320004a1b47",
            "owner_id": "763429035406",
            "tags": {
              "Name": "demo-817bsr"
            },
            "tags_all": {
              "Name": "demo-817bsr"
            },
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0822fc796c126b428",
            "connectivity_type": "public",
            "id": "nat-0706f3c5775c932b0",
            "network_interface_id": "eni-014ca1918e0615034",
            "private_ip": "10.4.17.25",
            "public_ip": "108.128.167.90",
            "subnet_id": "subnet-0eec21bdfbc4820e6",
            "tags": {
              "Name": "demo-817bsr-eu-west-1a"
            },
            "tags_all": {
              "Name": "demo-817bsr-eu-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0138b99b1af7af3611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0706f3c5775c932b0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0138b99b1af7af361",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d0497320004a1b47",
            "id": "r-rtb-0c28a0fedabe608131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c28a0fedabe60813",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:route-table/rtb-0138b99b1af7af361",
            "id": "rtb-0138b99b1af7af361",
            "owner_id": "763429035406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0706f3c5775c932b0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-817bsr-private"
            },
            "tags_all": {
              "Name": "demo-817bsr-private"
            },
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:route-table/rtb-0c28a0fedabe60813",
            "id": "rtb-0c28a0fedabe60813",
            "owner_id": "763429035406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0497320004a1b47",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-817bsr-public"
            },
            "tags_all": {
              "Name": "demo-817bsr-public"
            },
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8dbe8a64c682ada",
            "route_table_id": "rtb-0138b99b1af7af361",
            "subnet_id": "subnet-031095777d609510c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e472bdc073c55c22",
            "route_table_id": "rtb-0138b99b1af7af361",
            "subnet_id": "subnet-0502dfcd9f7d22b53"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012495f70fea27c76",
            "route_table_id": "rtb-0c28a0fedabe60813",
            "subnet_id": "subnet-0eec21bdfbc4820e6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:subnet/subnet-031095777d609510c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.4.32.0/19",
            "id": "subnet-031095777d609510c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "763429035406",
            "tags": {
              "Name": "demo-817bsr-private-eu-west-1a"
            },
            "tags_all": {
              "Name": "demo-817bsr-private-eu-west-1a"
            },
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:subnet/subnet-0502dfcd9f7d22b53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.4.64.0/19",
            "id": "subnet-0502dfcd9f7d22b53",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "763429035406",
            "tags": {
              "Name": "demo-817bsr-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "demo-817bsr-private-eu-west-1b"
            },
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:subnet/subnet-0eec21bdfbc4820e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.4.0.0/19",
            "id": "subnet-0eec21bdfbc4820e6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "763429035406",
            "tags": {
              "Name": "demo-817bsr-public-eu-west-1a"
            },
            "tags_all": {
              "Name": "demo-817bsr-public-eu-west-1a"
            },
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:vpc/vpc-0af081186a0ab1c79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-01e4bdca9690bab8f",
            "default_route_table_id": "rtb-061a8d2c30617f8e5",
            "default_security_group_id": "sg-08d1b7b30c0cc72ab",
            "dhcp_options_id": "dopt-0c06e0bb33d880370",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0af081186a0ab1c79",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-061a8d2c30617f8e5",
            "owner_id": "763429035406",
            "tags": {
              "Name": "demo-817bsr"
            },
            "tags_all": {
              "Name": "demo-817bsr"
            }
          },
          "dependencies": [
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kinesis-streams",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:vpc-endpoint/vpce-0b544664ede15f5d2",
            "dns_entry": [
              {
                "dns_name": "vpce-0b544664ede15f5d2-yv2krldm.kinesis.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0b544664ede15f5d2-yv2krldm-eu-west-1b.kinesis.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0b544664ede15f5d2-yv2krldm-eu-west-1a.kinesis.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z04116753STW5Y6QKQ4RP"
              },
              {
                "dns_name": "control-kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0581119345554MF9AWL4"
              },
              {
                "dns_name": "*.control-kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0581119345554MF9AWL4"
              },
              {
                "dns_name": "data-kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05746572IANU2US60L0B"
              },
              {
                "dns_name": "*.data-kinesis.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05746572IANU2US60L0B"
              }
            ],
            "id": "vpce-0b544664ede15f5d2",
            "network_interface_ids": [
              "eni-0ca0880ae4d183cfa",
              "eni-0e4ea0d1721475731"
            ],
            "owner_id": "763429035406",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08d1b7b30c0cc72ab"
            ],
            "service_name": "com.amazonaws.eu-west-1.kinesis-streams",
            "state": "available",
            "subnet_ids": [
              "subnet-031095777d609510c",
              "subnet-0502dfcd9f7d22b53"
            ],
            "tags": {
              "Name": "demo-817bsr-kinesis-vpc-endpoint"
            },
            "tags_all": {
              "Name": "demo-817bsr-kinesis-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:vpc-endpoint/vpce-0004b66001170de2f",
            "cidr_blocks": [
              "18.34.240.0/22",
              "18.34.32.0/20",
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-0004b66001170de2f",
            "owner_id": "763429035406",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0138b99b1af7af361",
              "rtb-0c28a0fedabe60813"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "demo-817bsr-s3-vpc-endpoint"
            },
            "tags_all": {
              "Name": "demo-817bsr-s3-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:763429035406:vpc-endpoint/vpce-036f02d0b00737820",
            "dns_entry": [
              {
                "dns_name": "vpce-036f02d0b00737820-4ysoy09i.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-036f02d0b00737820-4ysoy09i-eu-west-1b.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-036f02d0b00737820-4ysoy09i-eu-west-1a.sts.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "sts.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0581460289MMXYHITLER"
              }
            ],
            "id": "vpce-036f02d0b00737820",
            "network_interface_ids": [
              "eni-0b2c058d66e8d0898",
              "eni-0e5fe0eeefaf1f04b"
            ],
            "owner_id": "763429035406",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08d1b7b30c0cc72ab"
            ],
            "service_name": "com.amazonaws.eu-west-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-031095777d609510c",
              "subnet-0502dfcd9f7d22b53"
            ],
            "tags": {
              "Name": "demo-817bsr-sts-vpc-endpoint"
            },
            "tags_all": {
              "Name": "demo-817bsr-sts-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0af081186a0ab1c79"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        }
      ]
    }
  ]
}